--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -15,8 +15,7 @@
         android:src="@drawable/ic_baseline_account_circle_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/orange" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/settings_name"
@@ -24,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/settings_profile_name_margin_top"
         android:gravity="center"
-        android:text="profile_name"
+        android:text="@string/profile_name"
         android:textSize="@dimen/settings_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/settings_email_margin_top"
-        android:text="E-mail"
+        android:text="@string/e_mail"
         android:textSize="@dimen/settings_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +45,7 @@
         android:layout_width="@dimen/settings_btn_size"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/settings_btn_name_margin_top"
-        android:text="Mettre à jour le nom"
+        android:text="@string/mettre_jour_le_nom"
         android:textSize="@dimen/settings_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,8 +56,8 @@
         android:layout_width="@dimen/settings_btn_size"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/settings_btn_margin_top"
-        android:backgroundTint="@color/orange"
-        android:text="Deconnexion"
+        android:backgroundTint="@color/green"
+        android:text="@string/retour"
         android:textSize="@dimen/settings_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/settings_btn_margin_top"
         android:backgroundTint="@color/red"
-        android:text="Supprimer le compte"
+        android:text="@string/supprimer_le_compte"
         android:textSize="@dimen/settings_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
