--- a/app/src/main/res/layout/workmates_item.xml
+++ b/app/src/main/res/layout/workmates_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -17,8 +16,7 @@
                 android:id="@+id/avatar"
                 android:layout_width="@dimen/workmate_item_avatar_size"
                 android:layout_height="@dimen/workmate_item_avatar_size"
-                android:src="@drawable/ic_baseline_account_circle_24"
-                app:tint="@color/black" />
+                android:src="@drawable/ic_baseline_account_circle_24" />
 
             <TextView
                 android:id="@+id/restaurant_text"
