--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="yellow">#FFEB3B</color>
     <color name="orange">#FF5722</color>
     <color name="green">#26FF00</color>
+    <color name="grey">#A3A3A3</color>
 </resources>
