--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -29,7 +29,7 @@
             android:id="@+id/tabs"
             class="com.google.android.material.tabs.TabLayout$TabView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/tabLayout_height"
             android:layout_gravity="bottom"
             android:elevation="5dp"
             app:tabIndicatorHeight="3dp">
