--- a/app/src/main/res/menu/menu_menu.xml
+++ b/app/src/main/res/menu/menu_menu.xml
@@ -7,6 +7,7 @@
         <item
             android:id="@+id/activity_main_drawer_dining"
             android:icon="@drawable/ic_baseline_local_dining_24"
+            android:iconTint="@color/white"
             android:title="@string/your_lunch" />
         <item
             android:id="@+id/activity_main_drawer_settings"
