--- a/app/src/main/res/layout/workmates_item.xml
+++ b/app/src/main/res/layout/workmates_item.xml
@@ -14,10 +14,32 @@
 
             <ImageView
                 android:id="@+id/avatar"
-                android:layout_marginLeft="@dimen/avatar_margin_left"
                 android:layout_width="@dimen/workmate_item_avatar_size"
                 android:layout_height="@dimen/workmate_item_avatar_size"
+                android:layout_marginLeft="@dimen/avatar_margin_left"
                 android:src="@drawable/ic_baseline_account_circle_24" />
+
+            <TextView
+                android:id="@+id/coWorkerName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/workmate_item_is_eating_margin_left"
+                android:text="name"
+                android:textColor="#191919"
+                android:textSize="@dimen/workmate_item_is_eating_textsize"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/isEating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/workmate_item_is_eating_margin_left"
+                android:text="@string/isEating"
+                android:textColor="#191919"
+                android:textSize="@dimen/workmate_item_is_eating_textsize"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/restaurant_text"
@@ -25,9 +47,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/workmate_item_is_eating_margin_left"
-                android:text="is eating +style  (+ restaurant)"
-                android:textSize="@dimen/workmate_item_is_eating_textsize"
+                android:text="restaurant style(restaurant)"
                 android:textColor="#191919"
+                android:textSize="@dimen/workmate_item_is_eating_textsize"
                 android:textStyle="bold" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
