--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLayout"
@@ -8,42 +8,28 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".ui.MainActivity.MainActivity">
-    <!-- IMAGE VIEW FIREBASE OC -->
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/default_large_margin"
-        android:background="@drawable/ic_baseline_dinner_dining"
-        app:tint="@color/black" />
 
-    <!-- TITLE FIREBASE OC -->
-    <TextView
+    <ImageView
         android:id="@+id/go4lunch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/default_margin"
-        android:text="@string/app_name"
+        android:elevation="2dp"
+        android:src="@drawable/ic_baseline_dinner_dining"
+        android:textColor="@color/white"
         android:textSize="@dimen/default_title_size"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- DESCRIPTION FIREBASE OC -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/default_margin"
-        android:text="@string/main_activity_description"
-        android:textSize="@dimen/default_text_size" />
-
-    <!-- BUTTONS CONTAINER -->
-    <LinearLayout
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/default_large_margin"
-        android:gravity="bottom"
-        android:orientation="vertical">
-
-
-    </LinearLayout>
-
-</LinearLayout>
+        android:src="@color/black"
+        android:textSize="@dimen/default_text_size"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 
