--- a/app/src/main/res/layout/restaurant_item.xml
+++ b/app/src/main/res/layout/restaurant_item.xml
@@ -23,7 +23,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/restaurant_item_distance_size"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/restaurant_item_distance_margin_left">
 
@@ -31,6 +31,8 @@
                 android:id="@+id/distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:lines="1"
                 android:text="distance"
                 android:textColor="#A5A5A5"
                 android:textSize="@dimen/restaurant_item_text_size" />
@@ -106,9 +108,9 @@
                 android:id="@+id/restaurant_hours"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="italic"
                 android:text="open-close"
-                android:textSize="@dimen/restaurant_item_text_size" />
+                android:textSize="@dimen/restaurant_item_text_size"
+                android:textStyle="italic" />
 
         </LinearLayout>
 
