--- a/app/src/main/res/layout/restaurant_item.xml
+++ b/app/src/main/res/layout/restaurant_item.xml
@@ -19,7 +19,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="restaurant_name"
-                android:textSize="@dimen/restaurant_item_text_size" />
+                android:textSize="@dimen/restaurant_item_text_size"
+                android:ellipsize="end"/>
         </LinearLayout>
 
         <LinearLayout
