--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -27,8 +27,10 @@
         android:id="@+id/restaurant_detail_name"
         android:layout_marginTop="@dimen/restaurant_name_detail_margin_top"
         android:layout_marginLeft="@dimen/restaurant_name_detail_margin_left"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:text="@string/restaurant_name"
         android:textColor="@color/white"
         android:textSize="@dimen/restaurant_detail_name_textsize"
@@ -68,7 +70,9 @@
     <TextView
         android:id="@+id/restaurant_detail_style"
         android:layout_marginLeft="@dimen/restaurant_name_detail_margin_left"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:layout_height="wrap_content"
         android:text="@string/style_restaurant"
         android:textColor="@color/white"
@@ -88,7 +92,9 @@
 
     <TextView
         android:id="@+id/restaurant_detail_adress"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:layout_height="wrap_content"
         android:text="@string/adress"
         android:textColor="@color/white"
