--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_layout_height"
-    android:background="@drawable/sign_in_picture"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/menu">
 
     <TextView
         android:id="@+id/textView"
