--- a/app/src/main/res/menu/menu_menu.xml
+++ b/app/src/main/res/menu/menu_menu.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/activity_main_drawer_dining"
             android:icon="@drawable/ic_baseline_local_dining_24"
-            android:iconTint="@color/white"
             android:title="@string/your_lunch" />
         <item
             android:id="@+id/activity_main_drawer_settings"
             android:icon="@drawable/ic_baseline_settings_24"
-            android:iconTint="@color/white"
             android:title="@string/settings" />
         <item
             android:id="@+id/activity_main_drawer_logout"
             android:icon="@drawable/ic_baseline_power_settings_new_24"
-            android:title="@string/logout"
-            app:iconTint="@color/white" />
+            android:title="@string/logout" />
     </group>
 </menu>
