--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,9 +26,7 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
-        <item name="android:windowBackground">
-            @drawable/sign_in_picture
-        </item>
+        <item name="android:windowBackground">@drawable/acceuil</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:textColorHint">@android:color/darker_gray</item>
