--- a/app/src/main/res/layout/restaurant_item.xml
+++ b/app/src/main/res/layout/restaurant_item.xml
@@ -16,8 +16,8 @@
 
             <TextView
                 android:id="@+id/restaurant_name"
-                android:layout_width="100dp"
-                android:layout_height="15dp"
+                android:layout_width="@dimen/restaurant_item_text_width"
+                android:layout_height="@dimen/restaurant_item_text_height"
                 android:text="restaurant_name"
                 android:textSize="@dimen/restaurant_item_text_size"
                 android:ellipsize="end"/>
@@ -64,7 +64,7 @@
 
             <TextView
                 android:id="@+id/restaurant_style"
-                android:layout_width="60dp"
+                android:layout_width="@dimen/restaurant_item_style_width"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:text="style"
@@ -72,7 +72,7 @@
 
             <TextView
                 android:id="@+id/restaurant_adress"
-                android:layout_width="100dp"
+                android:layout_width="@dimen/restaurant_item_adress_width"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
@@ -91,8 +91,7 @@
                 android:id="@+id/personPicture"
                 android:layout_width="@dimen/icon_person_size"
                 android:layout_height="@dimen/icon_person_size"
-                android:src="@drawable/ic_baseline_person_24"
-                app:tint="@color/black" />
+                android:src="@drawable/baseline_person_outline_black_18dp" />
 
             <TextView
                 android:id="@+id/number"
